--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ project.configurations {
 }
 
 project.dependencies {
+
+    implementation "org.xerial:sqlite-jdbc:3.7.2" // declaring SQLite here to be used in targettedMS test
     api("junit:junit:${junitVersion}")
     api("org.seleniumhq.selenium:selenium-api:${seleniumVersion}")
     implementation("commons-io:commons-io:${commonsIoVersion}")
