--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-aspectjVersion=1.9.6
+aspectjVersion=1.9.7
 commonsTextVersion=1.3
 reflectionsVersion=0.9.10
 hamcrestCoreVersion=1.3
 
 lookfirstSardineVersion=5.7
 jettyRepackagedVersion=9.4.12.v20180830
-seleniumVersion=4.0.0-beta-4
+seleniumVersion=4.0.0-rc-1
 mockserverNettyVersion=5.5.1
 
-labkeySchemasTestVersion=20.7.0
+labkeySchemasTestVersion=21.7.0
